[package]
name = "automerge_repo"
version = "0.1.0"
edition = "2021"
path = "src/lib.rs"

[[example]]
name = "tcp-example"
path = "examples/tcp_example.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = { version = "^0.3" }
uuid = { version = "1.2.2"}
crossbeam-channel = { version = "0.5.8" }
parking_lot = { version = "0.12.1" }
futures = { version = "0.3.28" }
serde = { version = "1.0.160", features = ["derive"]}
tokio = { version = "1.27", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec", "net" ] }
bytes = { version = "1.4.0" }
thiserror = "1.0.38"
minicbor = { version = "0.19.0", features = ["alloc"] }

[dev-dependencies]
clap = { version = "4.2.5", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["json"] }
axum = { version = "0.6.18" }
tokio = { version = "1.27", features = ["full"] }
tokio-serde = {version = "0.8.0", features = ["json"]}
serde_json = "1.0.96"
test_utils = { path = "test_utils" }
