[package]
name = "automerge_repo"
version = "0.1.0"
edition = "2021"

[[example]]
name = "tcp-example"
path = "examples/tcp_example.rs"
required-features = ["tokio"]

[[test]]
name = "interop"
required-features = ["tokio"]

[features]
tokio = ["dep:tokio", "dep:tokio-util", "dep:tokio-tungstenite", "dep:tungstenite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = { version = "0.4.1" }
uuid = { version = "1.2.2"}
crossbeam-channel = { version = "0.5.8" }
parking_lot = { version = "0.12.1" }
futures = { version = "0.3.28" }
serde = { version = "1.0.160", features = ["derive"]}
tokio = { version = "1.27", features = ["full"], optional = true }
tokio-util = { version = "0.7.8", features = ["codec", "net" ], optional = true }
bytes = { version = "1.4.0" }
thiserror = "1.0.38"
minicbor = { version = "0.19.0", features = ["alloc"] }
tokio-tungstenite = { version = "0.19.0", features = ["connect"], optional = true}
tungstenite = { version = "0.19.0", optional = true }
tracing = "0.1.37"
ring = "0.16.20"
hex = "0.4.3"
tempfile = "3.6.0"

[dev-dependencies]
clap = { version = "4.2.5", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["json", "blocking"], default-features = false }
axum = { version = "0.6.18" }
axum-macros = "0.3.7"
tokio = { version = "1.27", features = ["full"] }
tokio-serde = {version = "0.8.0", features = ["json"]}
serde_json = "1.0.96"
test_utils = { path = "test_utils" }
test-log = "0.2.12"
env_logger = "0.10.0"
tracing-subscriber = "0.3.17"
itertools = "0.11.0"
