[package]
name = "automerge_repo"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Alex Good <alex@memoryandthought.me>", "Gregory Terzian"]
repository = "https://github.com/automerge/automerge-repo-rs"
description = "A rust implementation of automerge-repo"
# For some reason the .gitignore in the interop-test-server directory is ignored
exclude = ["interop-test-server/node_modules", "interop-test-server/server.js"]

[[example]]
name = "tcp-example"
path = "examples/tcp-example.rs"
required-features = ["tokio"]

[[example]]
name = "distributed-bakery"
path = "examples/distributed_bakery.rs"
required-features = ["tokio"]

[[test]]
name = "interop"
required-features = ["tokio", "tungstenite", "axum"]

[[test]]
name = "network"
required-features = ["tokio", "tungstenite"]

[features]
tokio = ["dep:tokio", "dep:tokio-util"]
axum = ["dep:axum", "dep:tokio", "dep:tokio-util"]
tungstenite = ["dep:tungstenite"]

[dependencies]
automerge = { version = "0.6.0" }
axum = { version = "0.6.18", features = ["ws"], optional = true }
uuid = { version = "1.2.2" }
crossbeam-channel = { version = "0.5.8" }
parking_lot = { version = "0.12.1" }
futures = { version = "0.3.28" }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27", features = ["rt"], optional = true }
tokio-util = { version = "0.7.8", features = ["codec", "net"], optional = true }
bytes = { version = "1.4.0" }
thiserror = "1.0.38"
minicbor = { version = "0.19.0", features = ["alloc"] }
tungstenite = { version = "0.21", optional = true }
tracing = "0.1.37"
ring = "0.17"
hex = "0.4.3"
tempfile = "3.6.0"
bs58 = { version = "0.5.0", features = ["check"] }

[dev-dependencies]
clap = { version = "4.2.5", features = ["derive"] }
reqwest = { version = "0.11.17", features = [
    "json",
    "blocking",
], default-features = false }
axum = { version = "0.6.18", features = ["ws"] }
axum-macros = "0.3.7"
tokio = { version = "1.27", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["connect"] }
serde_json = "1.0.96"
test_utils = { path = "test_utils" }
test-log = { version = "0.2.12", features = ["trace"] }
env_logger = "0.10.0"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
itertools = "0.11.0"
autosurgeon = "0.8.0"
