[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27", features = ["full"] }
tokio-util = "0.7.8"
tokio-serde = {version = "0.8.0", features = ["json"]}
serde_json = "1.0.96"
automerge = { version = "0.5.0" }
uuid = { version = "1.2.2"}
crossbeam-channel = { version = "0.5.8" }
parking_lot = { version = "0.12.1" }
futures = { version = "0.3.28" }
serde = { version = "1.0.160", features = ["derive"]}
automerge_repo = { path = "../" }
